force-app/main/default/objects/TC_Account__x/fields/iHotelier_License_ID_c__c.field-meta.xml
<CustomField>
    <fullName>iHotelier_License_ID_c__c</fullName>
    <externalDeveloperName>iHotelier_License_ID__c</externalDeveloperName>
    <label>iHotelier License ID</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>