force-app/main/default/objects/TC_Account__x/fields/Implementation_Survey_Scheduled_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Survey_Scheduled_Date_c__c</fullName>
    <externalDeveloperName>Implementation_Survey_Scheduled_Date__c</externalDeveloperName>
    <label>Implementation Survey Scheduled Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>