force-app/main/default/objects/TC_Account__x/fields/Insite_Contact_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Insite_Contact_Id_c__c</fullName>
    <externalDeveloperName>Insite_Contact_Id__c</externalDeveloperName>
    <label>Insite Contact Id</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>