force-app/main/default/objects/TC_Account__x/fields/International_Account_c__c.field-meta.xml
<CustomField>
    <fullName>International_Account_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>International_Account__c</externalDeveloperName>
    <inlineHelpText>Check box if this is an account in Europe/ASPAC - International</inlineHelpText>
    <label>Check if Acct is in International</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>