force-app/main/default/objects/TC_Account__x/fields/Management_Company_Date_Last_Updated_c__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_Date_Last_Updated_c__c</fullName>
    <externalDeveloperName>Management_Company_Date_Last_Updated__c</externalDeveloperName>
    <label>Management Company - Date Last Updated</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>