force-app/main/default/objects/TC_Account__x/fields/Management_Company_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Management_Company_Name_c__c</fullName>
    <externalDeveloperName>Management_Company_Name__c</externalDeveloperName>
    <label>Management Company Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>