force-app/main/default/objects/TC_Account__x/fields/Notes_for_PMS_Proactive_c__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_PMS_Proactive_c__c</fullName>
    <externalDeveloperName>Notes_for_PMS_Proactive__c</externalDeveloperName>
    <label>Notes for PMS Proactive</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>