force-app/main/default/objects/TC_Account__x/fields/of_Open_Implementations_c__c.field-meta.xml
<CustomField>
    <fullName>of_Open_Implementations_c__c</fullName>
    <externalDeveloperName>of_Open_Implementations__c</externalDeveloperName>
    <label># of Open Implementations</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>