force-app/main/default/objects/TC_Account__x/fields/Open_Risks_c__c.field-meta.xml
<CustomField>
    <fullName>Open_Risks_c__c</fullName>
    <externalDeveloperName>Open_Risks__c</externalDeveloperName>
    <label>Open Risks#</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>