force-app/main/default/objects/TC_Account__x/fields/Other_PMS_Vendor_c__c.field-meta.xml
<CustomField>
    <fullName>Other_PMS_Vendor_c__c</fullName>
    <externalDeveloperName>Other_PMS_Vendor__c</externalDeveloperName>
    <label>Other PMS</label>
    <length>100</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>