force-app/main/default/objects/TC_Account__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Owner ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>