force-app/main/default/objects/TC_Account__x/fields/Ownership_Type_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type_Code_c__c</fullName>
    <externalDeveloperName>Ownership_Type_Code__c</externalDeveloperName>
    <label>Ownership Type Code</label>
    <length>10</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>