force-app/main/default/objects/TC_Account__x/fields/Parent_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Parent_Revenue_c__c</fullName>
    <externalDeveloperName>Parent_Revenue__c</externalDeveloperName>
    <label>Parent Revenue</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>