force-app/main/default/objects/TC_Account__x/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <externalDeveloperName>Phone</externalDeveloperName>
    <label>Account Phone</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Phone</type>
</CustomField>