force-app/main/default/objects/TC_Account__x/fields/PPC_Funds_c__c.field-meta.xml
<CustomField>
    <fullName>PPC_Funds_c__c</fullName>
    <externalDeveloperName>PPC_Funds__c</externalDeveloperName>
    <label>PPC Funds</label>
    <precision>16</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>