force-app/main/default/objects/TC_Account__x/fields/Preferred_Language_c__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_c__c</fullName>
    <externalDeveloperName>Preferred_Language__c</externalDeveloperName>
    <label>Pref. Language of Customer</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Basque</fullName>
            </value>
            <value>
                <fullName>Belarusian</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Estonian</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>Galician</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Hebrew</fullName>
            </value>
            <value>
                <fullName>Hindi + Urdu</fullName>
            </value>
            <value>
                <fullName>Hungarian</fullName>
            </value>
            <value>
                <fullName>Indonesian</fullName>
            </value>
            <value>
                <fullName>Inuktitut</fullName>
            </value>
            <value>
                <fullName>Irish</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Luxembourgish</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Nepali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>