force-app/main/default/objects/TC_Account__x/fields/Property_Not_in_GDS_c__c.field-meta.xml
<CustomField>
    <fullName>Property_Not_in_GDS_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Property_Not_in_GDS__c</externalDeveloperName>
    <label>Property Not in GDS</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>