force-app/main/default/objects/TC_Account__x/fields/Res_Risk_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Res_Risk_Comments_c__c</fullName>
    <externalDeveloperName>Res_Risk_Comments__c</externalDeveloperName>
    <inlineHelpText>Comments related to the Res Risk Tier, input by the AM&apos;s</inlineHelpText>
    <label>Res Risk Comments</label>
    <length>250</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>