force-app/main/default/objects/TC_Account__x/fields/Reservation_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Manager_c__c</fullName>
    <externalDeveloperName>Reservation_Manager__c</externalDeveloperName>
    <label>Reservations Processor</label>
    <length>18</length>
    <referenceTo>TC_Account__x</referenceTo>
    <relationshipLabel>TC Accounts Reservations Processor</relationshipLabel>
    <relationshipName>TC_Accounts_Reservation_Proc</relationshipName>
    <type>ExternalLookup</type>
</CustomField>