force-app/main/default/objects/TC_Account__x/fields/Revenue_Total_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Total_c__c</fullName>
    <externalDeveloperName>Revenue_Total__c</externalDeveloperName>
    <label>Revenue-Total</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>