force-app/main/default/objects/TC_Account__x/fields/Revenue_Video_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Video_c__c</fullName>
    <externalDeveloperName>Revenue_Video__c</externalDeveloperName>
    <label>Revenue-Video</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>