force-app/main/default/objects/TC_Account__x/fields/Revenue_Web_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Web_c__c</fullName>
    <externalDeveloperName>Revenue_Web__c</externalDeveloperName>
    <label>Revenue-Web</label>
    <precision>12</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>