force-app/main/default/objects/TC_Account__x/fields/RVP_c__c.field-meta.xml
<CustomField>
    <fullName>RVP_c__c</fullName>
    <externalDeveloperName>RVP__c</externalDeveloperName>
    <label>RVP</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>