force-app/main/default/objects/TC_Account__x/fields/Sabre_Bookings_c__c.field-meta.xml
<CustomField>
    <fullName>Sabre_Bookings_c__c</fullName>
    <externalDeveloperName>Sabre_Bookings__c</externalDeveloperName>
    <label>Sabre Bookings</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>