force-app/main/default/objects/TC_Account__x/fields/Sabre_c__c.field-meta.xml
<CustomField>
    <fullName>Sabre_c__c</fullName>
    <externalDeveloperName>Sabre__c</externalDeveloperName>
    <label>Sabre #</label>
    <length>12</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>