force-app/main/default/objects/TC_Account__x/fields/Send_Web_report_to_MCM_c__c.field-meta.xml
<CustomField>
    <fullName>Send_Web_report_to_MCM_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Send_Web_report_to_MCM__c</externalDeveloperName>
    <label>Send Web report to MCM</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>