force-app/main/default/objects/TC_Account__x/fields/SEO_Analyst_c__c.field-meta.xml
<CustomField>
    <fullName>SEO_Analyst_c__c</fullName>
    <externalDeveloperName>SEO_Analyst__c</externalDeveloperName>
    <inlineHelpText>Accounts Marketing SEO Analyst</inlineHelpText>
    <label>SEO Analyst</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alejandro Perez</fullName>
            </value>
            <value>
                <fullName>Alessio Cesaro</fullName>
            </value>
            <value>
                <fullName>Alexis Ng</fullName>
            </value>
            <value>
                <fullName>Alex Pettus</fullName>
            </value>
            <value>
                <fullName>Carla Silvestre</fullName>
            </value>
            <value>
                <fullName>Cesar Tellez</fullName>
            </value>
            <value>
                <fullName>David Bretos</fullName>
            </value>
            <value>
                <fullName>Eduardo Gonzalez</fullName>
            </value>
            <value>
                <fullName>Eileen Gutierrez</fullName>
            </value>
            <value>
                <fullName>Emy Menjivar</fullName>
            </value>
            <value>
                <fullName>Erik Folgate</fullName>
            </value>
            <value>
                <fullName>Estefania Bedmar</fullName>
            </value>
            <value>
                <fullName>Francisco Lambis</fullName>
            </value>
            <value>
                <fullName>Giorgio Franco</fullName>
            </value>
            <value>
                <fullName>Jennifer Cox</fullName>
            </value>
            <value>
                <fullName>Karl Ott</fullName>
            </value>
            <value>
                <fullName>Kristin Lepore</fullName>
            </value>
            <value>
                <fullName>Marie Abautret</fullName>
            </value>
            <value>
                <fullName>Marta Fernandez</fullName>
            </value>
            <value>
                <fullName>Martha Gomez</fullName>
            </value>
            <value>
                <fullName>Meritxell Juanola</fullName>
            </value>
            <value>
                <fullName>Miluska Theron</fullName>
            </value>
            <value>
                <fullName>Prince Prempeh</fullName>
            </value>
            <value>
                <fullName>Russell Crudgington</fullName>
            </value>
            <value>
                <fullName>Ryan Bolicano</fullName>
            </value>
            <value>
                <fullName>Valentina Caggiano</fullName>
            </value>
            <value>
                <fullName>Veronika Jancso</fullName>
            </value>
            <value>
                <fullName>Victoria Lopez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>