force-app/main/default/objects/TC_Account__x/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
    <label>Shipping Zip/Postal Code</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>