force-app/main/default/objects/TC_Account__x/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <externalDeveloperName>ShippingStreet</externalDeveloperName>
    <label>Shipping Street</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>TextArea</type>
</CustomField>