force-app/main/default/objects/TC_Account__x/fields/SicDesc__c.field-meta.xml
<CustomField>
    <fullName>SicDesc__c</fullName>
    <externalDeveloperName>SicDesc</externalDeveloperName>
    <label>SIC Description</label>
    <length>80</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>