force-app/main/default/objects/TC_Account__x/fields/SPA_Email_c__c.field-meta.xml
<CustomField>
    <fullName>SPA_Email_c__c</fullName>
    <externalDeveloperName>SPA_Email__c</externalDeveloperName>
    <label>SPA Email</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Email</type>
</CustomField>