force-app/main/default/objects/TC_Account__x/fields/STR_Event_Completion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Event_Completion_Date_c__c</fullName>
    <externalDeveloperName>STR_Event_Completion_Date__c</externalDeveloperName>
    <label>STR Event Completion Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>