force-app/main/default/objects/TC_Account__x/fields/STR_Projected_Open_Date_c__c.field-meta.xml
<CustomField>
    <fullName>STR_Projected_Open_Date_c__c</fullName>
    <externalDeveloperName>STR_Projected_Open_Date__c</externalDeveloperName>
    <label>STR Projected Open Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>