force-app/main/default/objects/TC_Account__x/fields/Sub_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region_c__c</fullName>
    <externalDeveloperName>Sub_Region__c</externalDeveloperName>
    <inlineHelpText>What is the Account Sub region?</inlineHelpText>
    <label>Sub Region</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANZ &amp; South Pacific</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>India &amp; Sub Continent</fullName>
            </value>
            <value>
                <fullName>Japan-Micronesia</fullName>
            </value>
            <value>
                <fullName>Mexico, Central America and Caribbean</fullName>
            </value>
            <value>
                <fullName>Middle East-Africa</fullName>
            </value>
            <value>
                <fullName>N Asia</fullName>
            </value>
            <value>
                <fullName>Northern Europe</fullName>
            </value>
            <value>
                <fullName>SE Asia</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Southern Europe</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>