force-app/main/default/objects/TC_Account__x/fields/Temporary_Closure_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Closure_Reason_c__c</fullName>
    <externalDeveloperName>Temporary_Closure_Reason__c</externalDeveloperName>
    <inlineHelpText>Why is this hotel temporarily closed</inlineHelpText>
    <label>Temporary Closure Reason</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Covid19</fullName>
            </value>
            <value>
                <fullName>Hurricane</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Tornado</fullName>
            </value>
            <value>
                <fullName>Union Strike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>