force-app/main/default/objects/TC_Account__x/fields/Temporary_Property_Closure_c__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Property_Closure_c__c</fullName>
    <externalDeveloperName>Temporary_Property_Closure__c</externalDeveloperName>
    <inlineHelpText>Is this hotel temporary closed?</inlineHelpText>
    <label>Temporary Property Closure</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>