force-app/main/default/objects/TC_Account__x/fields/Tier_c__c.field-meta.xml
<CustomField>
    <fullName>Tier_c__c</fullName>
    <externalDeveloperName>Tier__c</externalDeveloperName>
    <inlineHelpText>Based on GMS revenue.</inlineHelpText>
    <label>GMS Tier</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Account ($75k +)</fullName>
            </value>
            <value>
                <fullName>Strategic Account ($35-74k)</fullName>
                <label>Strategic Account ($35k-74k)</label>
            </value>
            <value>
                <fullName>Core Account ($10-34k)</fullName>
                <label>Core Account ($7,5k-34k)</label>
            </value>
            <value>
                <fullName>Select Account (&lt;$10k)</fullName>
                <label>Select Account (&lt;$7,5k)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>