force-app/main/default/objects/TC_Account__x/fields/URL_c__c.field-meta.xml
<CustomField>
    <fullName>URL_c__c</fullName>
    <externalDeveloperName>URL__c</externalDeveloperName>
    <label>URL</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>