force-app/main/default/objects/TC_Account__x/fields/Website_Address_1_c__c.field-meta.xml
<CustomField>
    <fullName>Website_Address_1_c__c</fullName>
    <externalDeveloperName>Website_Address_1__c</externalDeveloperName>
    <label>Website Address 1</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>