force-app/main/default/objects/TC_Account__x/fields/WorldSpan_c__c.field-meta.xml
<CustomField>
    <fullName>WorldSpan_c__c</fullName>
    <externalDeveloperName>WorldSpan__c</externalDeveloperName>
    <label>WorldSpan #</label>
    <length>20</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>