force-app/main/default/objects/TC_Account__x/fields/Worldspan_GDS_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Worldspan_GDS_Revenue_c__c</fullName>
    <externalDeveloperName>Worldspan_GDS_Revenue__c</externalDeveloperName>
    <label>Worldspan GDS Revenue</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>