force-app/main/default/objects/TC_Account__x/fields/Year3_c__c.field-meta.xml
<CustomField>
    <fullName>Year3_c__c</fullName>
    <externalDeveloperName>Year3__c</externalDeveloperName>
    <label>Year3</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>